stop overlapping on short screens

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -55,9 +55,9 @@ section#main {
       width: 100%;
 
       position: absolute;
-      bottom: 120px;
+      bottom: 80px;
 
-      font-size: 2rem;
+      font-size: 1.5rem;
       text-transform: uppercase;
     }
 
@@ -66,9 +66,9 @@ section#main {
 
       position: absolute;
       left: 0;
-      bottom: 50px;
+      bottom: 30px;
 
-      font-size: 2.5rem;
+      font-size: 2.0rem;
     }
   }
 
